--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Bhai Veetu Biriyani</title>
+    <title>MOMO's</title>
     <link
       rel="shortcut icon"
-      href="images/briyani-icon.jpg"
+      href="images/momo-icon.webp"
       type="image/x-icon"
     />
 
@@ -16,12 +16,15 @@
     />
     <meta
       name="Momomia"
-      content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes"
+      content="Author: Mohammed Ilyas B, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes"
     />
-    <meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
+    <meta
+      name="description"
+      content="Food Ordering Website. The 'MOMOMIA' has
     been practiced to override the prevalent problems in manual systems. This
     website is compatible to finalize and, in some cases, reduces the
-    difficulties faced by this existing system.>
+    difficulties faced by this existing system."
+    />
     <meta name="robots" content="all" />
     <meta name="googlebot" content="all" />
 
@@ -1991,14 +1994,14 @@
         <div class="col-md-4 mb-5 mb-md-0">
           <div class="d-flex justify-content-center mb-4">
             <img
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp"
+              src="./images/anaderams.jpg"
               class="rounded-circle shadow-1-strong"
               width="150"
               height="150"
               alt="person"
             />
           </div>
-          <h5 class="mb-3">Maria Smantha</h5>
+          <h5 class="mb-3">Ana De Armas</h5>
           <p class="px-xl-3">
             <i class="fas fa-quote-left pe-2"></i>
             Good Service, fast Delivery and amazing taste.
@@ -2056,14 +2059,14 @@
         <div class="col-md-4 mb-0">
           <div class="d-flex justify-content-center mb-4">
             <img
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(9).webp"
+              src="./images/peakpx.jpg"
               class="rounded-circle shadow-1-strong"
               width="150"
               height="150"
               alt="person"
             />
           </div>
-          <h5 class="mb-3">John Smith</h5>
+          <h5 class="mb-3">Chris Evans</h5>
           <p class="px-xl-3">
             <i class="fas fa-quote-left pe-2"></i>Awesome Taste
           </p>
